--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit generate && drizzle-kit migrate",
+    "db:fix": "psql $DATABASE_URL -f create_missing_tables.sql",
+    "diagnose": "tsx diagnostic_and_fix.ts",
+    "test:db": "tsx diagnostic_and_fix.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
@@ -62,12 +66,14 @@
     "@uppy/react": "^4.5.2",
     "adm-zip": "^0.5.16",
     "canvas": "^3.1.2",
+    "chalk": "^5.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "csv-parser": "^3.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
