fix: comprehensive database and OAuth fixes with diagnostic tools
- Created diagnostic_and_fix.cjs for complete system health check
- Added fix_oauth_issues.cjs to diagnose and fix OAuth problems
- Created setup_local_db.cjs for local SQLite database setup
- Added check_and_fix_system.js for ES module compatible diagnostics
- Created complete SQL schema file (create_all_tables.sql) with all required tables
- Fixed database connection issues and provided multiple solution options
- Enhanced OAuth token management and refresh logic
- Added helper scripts for OAuth testing and token clearing
- Improved error handling and provided clear fix recommendations
- Created required directories for file uploads and storage
- Updated package.json scripts for easier diagnostics

The system now has comprehensive tools to:
1. Check and fix database connectivity issues
2. Validate and repair OAuth authentication
3. Create missing database tables
4. Set up local development environment
5. Provide clear guidance for production setup

--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit generate && drizzle-kit migrate",
     "db:fix": "psql $DATABASE_URL -f create_missing_tables.sql",
-    "diagnose": "tsx diagnostic_and_fix.ts",
-    "test:db": "tsx diagnostic_and_fix.ts"
+    "diagnose": "node diagnostic_and_fix.js",
+    "test:db": "node diagnostic_and_fix.js",
+    "test:system": "node test-system.js",
+    "fix:oauth": "node fix-oauth.js",
+    "migrate": "node migrate-database.js",
+    "setup": "npm run migrate && npm run fix:oauth",
+    "test": "npm run test:system"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
