--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-window": "^1.8.11",
+    "readline": "^1.3.0",
     "recharts": "^2.15.2",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
